tests/baselines/reference/ClassDeclaration11.errors.txt
==== tests/cases/compiler/ClassDeclaration11.ts (1 errors) ====
    class C {
       constructor();
       foo() { }
       ~~~
!!! ClassDeclaration11.ts(3,4): error TS2240: Constructor implementation expected.
    }